--- a/Back-End-main/servis-api-crud-firebase/package.json
+++ b/Back-End-main/servis-api-crud-firebase/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.1",
     "firebase": "^10.14.0",
     "firebase-admin": "^12.6.0",
+    "jsonwebtoken": "^9.0.2",
     "midtrans-client": "^1.3.1",
     "multer": "^1.4.5-lts.1"
   },
