--- a/Back-End-main/servis-api-crud-firebase/package.json
+++ b/Back-End-main/servis-api-crud-firebase/package.json
@@ -12,21 +12,29 @@
   "license": "ISC",
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "adm-zip": "^0.5.16",
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "ffmpeg": "^0.0.4",
     "ffmpeg-installer": "^1.0.2",
     "firebase": "^10.14.0",
     "firebase-admin": "^12.6.0",
     "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
+    "jszip": "^3.10.1",
     "jwt-decode": "^4.0.0",
     "midtrans-client": "^1.3.1",
+    "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
-    "sharp": "^0.33.5"
+    "papaparse": "^5.4.1",
+    "sharp": "^0.33.5",
+    "three": "^0.171.0",
+    "three-stdlib": "^2.35.2",
+    "xlsx": "^0.18.5"
   },
   "description": ""
 }
